# deltaship

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  RELEASING.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/deltaship-client/: Cargo.toml
crates/deltaship-client/src/: audit.rs  checker.rs  config.rs  daemon.rs  downloader.rs  lib.rs  main.rs  patcher.rs
crates/deltaship-client/src/commands/: add.rs  cleanup.rs  completions.rs  list.rs  mod.rs  remove.rs  rollback.rs  service.rs  status.rs  update.rs  version.rs
crates/deltaship-client/tests/: security_tests.rs  version_validation_tests.rs
crates/deltaship-core/: Cargo.toml
crates/deltaship-core/src/: binary.rs  diff.rs  error.rs  lib.rs  update.rs  version.rs
crates/deltaship-crypto/: Cargo.toml
crates/deltaship-crypto/src/: error.rs  hashing.rs  keys.rs  lib.rs  signing.rs
crates/deltaship-db/: Cargo.toml
crates/deltaship-db/src/: client.rs  error.rs  lib.rs  models.rs  publisher.rs  schema.rs
crates/deltaship-diff/: Cargo.toml
crates/deltaship-diff/benches/: diff_bench.rs
crates/deltaship-diff/examples/: apply-delta.rs  gen-delta.rs
crates/deltaship-diff/src/: apply.rs  compress.rs  error.rs  generate.rs  lib.rs
crates/deltaship-publisher/: Cargo.toml
crates/deltaship-publisher/src/: api_client.rs  archive.rs  config.rs  diff_manager.rs  lib.rs  main.rs  utils.rs
crates/deltaship-publisher/src/commands/: cleanup.rs  completions.rs  config.rs  diff.rs  export.rs  import.rs  info.rs  init.rs  keygen.rs  list.rs  mod.rs  publish.rs  register.rs  sign.rs  stats.rs  verify.rs
crates/deltaship-server/: Cargo.toml  README.md
crates/deltaship-server/src/: auth.rs  lib.rs  main.rs  models.rs  rate_limit.rs  state.rs  stats.rs  storage.rs  validation.rs
crates/deltaship-server/src/commands/: completions.rs  mod.rs
crates/deltaship-server/src/routes/: admin.rs  download.rs  health.rs  mod.rs  publish.rs  update.rs
crates/deltaship-server/tests/: update_check.rs
crates/vbdp-core/: Cargo.toml
crates/vbdp-core/src/: binary.rs  diff.rs  error.rs  lib.rs  update.rs  version.rs
crates/vbdp-crypto/: Cargo.toml
crates/vbdp-crypto/src/: error.rs  hashing.rs  keys.rs  lib.rs  signing.rs
crates/vbdp-db/: Cargo.toml
crates/vbdp-db/src/: client.rs  error.rs  lib.rs  models.rs  publisher.rs  schema.rs
crates/vbdp-diff/: Cargo.toml
crates/vbdp-diff/benches/: diff_bench.rs
crates/vbdp-diff/examples/: apply-delta.rs  gen-delta.rs
crates/vbdp-diff/src/: apply.rs  error.rs  generate.rs  lib.rs
demo/: apply-delta.rs  gen-delta.rs
deploy/: .env.example  Caddyfile  Dockerfile.server  README.md  docker-compose.yml
docs/: AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  COMPLETE_FLOW.md  CONTRIBUTING.md  DATABASE_MIGRATIONS.md  DEPLOYMENT_CHECKLIST.md  FAQ.md  LICENSE.md  MIGRATION_ROLLBACK.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  RUNBOOKS.md  SECURITY.md  quickstart.md
docs/api/: API_SPECIFICATION.md
docs/architecture/: PROTOCOL_SPECIFICATION.md  SYSTEM_DESIGN.md
docs/ci/: README.md  publish-template.yml
docs/deployment/: CLIENT_INSTALLATION.md  PUBLISHER_SETUP.md  SERVER_DEPLOYMENT.md
docs/integration/: CI_CD_INTEGRATION.md  EXISTING_SYSTEMS.md  INTEGRATION_GUIDE.md  LANGUAGE_EXAMPLES.md
docs/operations/: MAINTENANCE.md  MONITORING.md
docs/security/: SECURITY_MODEL.md
docs/technical/: COMPRESSION_HANDLING.md  DATABASE_SCHEMA.md  FEASIBILITY_ANALYSIS.md  PERFORMANCE_TARGETS.md  PLATFORM_REQUIREMENTS.md  ROLLBACK_SPECIFICATION.md  STORAGE_COST_MODEL.md  VERSION_SPECIFICATION.md
docs/tools/: CLIENT_PATCHER.md  PUBLISHER_TOOLKIT.md  UPDATE_SERVER.md
examples/: README.md  demo.sh
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_binary_name.rs  fuzz_diff_patch.rs  fuzz_url_parsing.rs  fuzz_version_string.rs
migrations/: 001_initial_client_schema.sql  002_initial_publisher_schema.sql  README.md
monitoring/: README.md  grafana-dashboard.json  prometheus-alerts.yml
tests/: Cargo.toml  concurrent_locking.rs  e2e_pipeline.rs  end_to_end.rs
