[workspace]
resolver = "2"
members = [
    "crates/vbdp-core",
    "crates/vbdp-crypto",
    "crates/vbdp-db",
    "crates/vbdp-diff",
    "crates/vbdp-publisher",
    "crates/vbdp-server",
    "crates/vbdp-client",
    "tests",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jayashankar"]
description = "Versioned Binary Delta Patcher - A secure binary update system"
license = "Apache-2.0"
# TODO: Before public release, update to actual GitHub organization
repository = "https://github.com/jayashankarvr/vbdp"

[workspace.dependencies]
# Internal crates
vbdp-core = { path = "crates/vbdp-core" }
vbdp-crypto = { path = "crates/vbdp-crypto" }
vbdp-db = { path = "crates/vbdp-db" }
vbdp-diff = { path = "crates/vbdp-diff" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Versioning
semver = { version = "1.0", features = ["serde"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
hex = "0.4"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Web server
axum = "0.8"
tower = "0.5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }
