[workspace]
resolver = "2"
members = [
    "crates/deltaship-core",
    "crates/deltaship-crypto",
    "crates/deltaship-db",
    "crates/deltaship-diff",
    "crates/deltaship-publisher",
    "crates/deltaship-server",
    "crates/deltaship-client",
    "tests",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jayashankar"]
description = "Deltaship - Version-Aware Binary Differential Update System"
license = "Apache-2.0"
repository = "https://github.com/jayashankarvr/deltaship"

[workspace.dependencies]
# Internal crates
deltaship-core = { path = "crates/deltaship-core" }
deltaship-crypto = { path = "crates/deltaship-crypto" }
deltaship-db = { path = "crates/deltaship-db" }
deltaship-diff = { path = "crates/deltaship-diff" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Versioning
semver = { version = "1.0", features = ["serde"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
hex = "0.4"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Web server
axum = "0.8"
tower = "0.5"

# HTTP client
reqwest = { version = "0.13", features = ["json", "multipart"] }
