[package]
name = "deltaship-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and models for Deltaship"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
