[package]
name = "deltaship-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic primitives for Deltaship"

[dependencies]
ed25519-dalek.workspace = true
blake3.workspace = true
sha2.workspace = true
rand.workspace = true
zeroize.workspace = true
thiserror.workspace = true
hex.workspace = true
chacha20poly1305 = "0.10"
argon2 = "0.5"
subtle = "2.5"
