[package]
name = "deltaship-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite database layer for Deltaship Publisher Toolkit and Client Patcher"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
semver.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
deltaship-core = { path = "../deltaship-core" }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
